# spotilight

./: .gitignore  LICENSE  README.md  package.json
src/: index.html  style.css
src-tauri/: Cargo.toml  logo_base64.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
