[package]
name = "spotilight"
version = "1.0.0"
edition = "2021"
description = "A lightweight Spotify desktop client built with Tauri"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wry = "0.54"
tauri-plugin-autostart = "2.5.1"
